--- a/src/scss/detailproduct.scss
+++ b/src/scss/detailproduct.scss
@@ -1,251 +1,256 @@
-@import "./index.scss";
-@import "../scss/responsive.scss";
+@import './index.scss';
+@import '../scss/responsive.scss';
 
 .detailproduct {
-	padding-top: 32px;
-	padding-bottom: 55px;
-	font-weight: 400;
-	&__main {
-		gap: 7.5%;
-		@include flex_row(start, start, nowrap);
-	}
-	&__images {
-		@include flex_row(space-between, start, nowrap);
-		gap: 6%;
-		height: 500px;
-	}
-	&__thumbnails {
-		width: 14%;
-		display: flex;
-		flex-direction: column;
-		gap: 30px;
-	}
-	&__thumbitems {
-		@include containimage(100%, 80px, 10px);
-		border: 2px solid transparent;
-		&:hover {
-			border-color: #000;
-			cursor: pointer;
-		}
-	}
-	&__showingImage {
-		@include containimage(78%, 500px, 10px);
-	}
-	&__mainInfo {
-		display: flex;
-		flex-direction: column;
-		height: 500px;
-		justify-content: space-between;
-	}
-	&__name {
-		font-size: 42px;
-		line-height: 63px;
-	}
-	&__price {
-		margin-bottom: 10px;
-		@include flex_row(start, center, nowrap);
-		gap: 20px;
-		span {
-			font-size: 24px;
-			font-weight: 500;
-			line-height: 36px;
-			letter-spacing: 0.02rem;
-		}
-	}
-	&__oldprice {
-		text-decoration: line-through;
-		color: #9f9f9f;
-	}
-	&__vote {
-		@include flex_row(start, center, nowrap);
-		column-gap: 20px;
-		margin-bottom: 10px;
-	}
-	&__stars {
-		@include flex_row(start, center, nowrap);
-		gap: 8px;
-		margin-right: 8px;
-	}
-	&__totalvote {
-		@include flex_row(end, center, nowrap);
-		border-left: 1px solid #9f9f9f;
-		padding-left: 20px;
-		font-size: 13px;
-		line-height: 20px;
-		height: 30px;
-	}
-	&__introduce {
-		margin-bottom: 15px;
-		font-size: 13px;
-		line-height: 20px;
-		max-width: 424px;
-		width: 40%;
-	}
-	&__sizes,
-	&__colors {
-		margin-bottom: 10px;
-		p {
-			margin-bottom: 13px;
-			font-size: 14px;
-		}
-	}
-	&__sizebtns,
-	&__colorbtns {
-		@include flex_row(start, center, nowrap);
-		gap: 16px;
-	}
-	&__sizeItem {
-		@include flex_row(center, center, nowrap);
-		width: 30px;
-		height: 30px;
-		font-size: 13px;
-		border-radius: 5px;
-		background: #f9f1e7;
-		&:hover {
-			background: #b88e2f;
-			color: #fff;
-			cursor: pointer;
-		}
-	}
-	&__colorItem {
-		@include flex_row(center, center, nowrap);
-		@include containimage(30px, 30px, 50%);
-		border: 2px solid transparent;
-		&:hover {
-			border-radius: 5px;
-			cursor: pointer;
-		}
-	}
-	&__action {
-		margin-top: 20px;
-		font-size: 20px;
-		font-weight: 400;
-		line-height: 30px;
-		@include flex_row(start, center, nowrap);
-		gap: 18px;
-	}
-	&__changeAmount {
-		@include flex_row(space-between, center, nowrap);
-		width: 123px;
-		height: 64px;
-		border: 1px solid #9f9f9f;
-		border-radius: 10px;
-		font-size: 16px;
-		overflow: hidden;
-		.minus,
-		.plus {
-			width: 30%;
-			@include flex_row(center, center, nowrap);
-			height: 100%;
-			&:hover {
-				cursor: pointer;
-				background-color: #9f9f9f;
-				color: #fff;
-			}
-		}
-	}
-	&__add_compare {
-		@include flex_row(space-between, center, nowrap);
-		gap: 10px;
-	}
-	&__addtocart,
-	&__compare {
-		width: 215px;
-		height: 64px;
-		@include flex_row(center, center, nowrap);
-		border-radius: 15px;
-		border: 1px solid #000000;
-		font-size: 20px;
-		&:hover {
-			cursor: pointer;
-			background-color: rgba(0, 0, 0, 1);
-			color: #fff;
-		}
-		&:active {
-			transform: translateY(2px);
-		}
-	}
-	.__crossline {
-		width: 100%;
-		height: 1px;
-		background-color: #d9d9d9;
-		margin-top: 53px;
-		margin-bottom: 35px;
-	}
-	&__type {
-		li {
-			@include flex_row(start, center, nowrap);
-			height: 37px;
-			gap: 15px;
+  padding-top: 32px;
+  padding-bottom: 55px;
+  font-weight: 400;
+  &__main {
+    gap: 7.5%;
+    @include flex_row(start, start, nowrap);
+  }
+  &__images {
+    @include flex_row(space-between, start, nowrap);
+    gap: 6%;
+    height: 500px;
+  }
+  &__thumbnails {
+    width: 16%;
+    height: 10rem;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+  }
+  &__thumbitems {
+    @include containimage(100%, 6.1rem, 10px);
+    border: 3px solid transparent;
+    overflow: visible;
+    &:hover {
+      border-color: #000;
+      cursor: pointer;
+    }
+    img {
+      @include containimage(100%, 6.1rem, 10px);
+    }
+  }
+  &__showingImage {
+    @include containimage(35rem, 30rem, 10px);
+  }
+  &__mainInfo {
+    display: flex;
+    flex-direction: column;
+    height: 500px;
+    justify-content: space-between;
+  }
+  &__name {
+    font-size: 42px;
+    line-height: 63px;
+  }
+  &__price {
+    margin-bottom: 10px;
+    @include flex_row(start, center, nowrap);
+    gap: 20px;
+    span {
+      font-size: 24px;
+      font-weight: 500;
+      line-height: 36px;
+      letter-spacing: 0.02rem;
+    }
+  }
+  &__oldprice {
+    text-decoration: line-through;
+    color: #9f9f9f;
+  }
+  &__vote {
+    @include flex_row(start, center, nowrap);
+    column-gap: 20px;
+    margin-bottom: 10px;
+  }
+  &__stars {
+    @include flex_row(start, center, nowrap);
+    gap: 8px;
+    margin-right: 8px;
+  }
+  &__totalvote {
+    @include flex_row(end, center, nowrap);
+    border-left: 1px solid #9f9f9f;
+    padding-left: 20px;
+    font-size: 13px;
+    line-height: 20px;
+    height: 30px;
+  }
+  &__introduce {
+    margin-bottom: 15px;
+    font-size: 13px;
+    line-height: 20px;
+    max-width: 424px;
+    width: 40%;
+  }
+  &__sizes,
+  &__colors {
+    margin-bottom: 10px;
+    p {
+      margin-bottom: 13px;
+      font-size: 14px;
+    }
+  }
+  &__sizebtns,
+  &__colorbtns {
+    @include flex_row(start, center, nowrap);
+    gap: 16px;
+  }
+  &__sizeItem {
+    @include flex_row(center, center, nowrap);
+    width: 30px;
+    height: 30px;
+    font-size: 13px;
+    border-radius: 5px;
+    background: #f9f1e7;
+    &:hover {
+      background: #b88e2f;
+      color: #fff;
+      cursor: pointer;
+    }
+  }
+  &__colorItem {
+    @include flex_row(center, center, nowrap);
+    @include containimage(30px, 30px, 50%);
+    border: 2px solid transparent;
+    &:hover {
+      border-radius: 5px;
+      cursor: pointer;
+    }
+  }
+  &__action {
+    margin-top: 20px;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 30px;
+    @include flex_row(start, center, nowrap);
+    gap: 18px;
+  }
+  &__changeAmount {
+    @include flex_row(space-between, center, nowrap);
+    width: 123px;
+    height: 64px;
+    border: 1px solid #9f9f9f;
+    border-radius: 10px;
+    font-size: 16px;
+    overflow: hidden;
+    .minus,
+    .plus {
+      width: 30%;
+      @include flex_row(center, center, nowrap);
+      height: 100%;
+      &:hover {
+        cursor: pointer;
+        background-color: #9f9f9f;
+        color: #fff;
+      }
+    }
+  }
+  &__add_compare {
+    @include flex_row(space-between, center, nowrap);
+    gap: 10px;
+  }
+  &__addtocart,
+  &__compare {
+    width: 215px;
+    height: 64px;
+    @include flex_row(center, center, nowrap);
+    border-radius: 15px;
+    border: 1px solid #000000;
+    font-size: 20px;
+    &:hover {
+      cursor: pointer;
+      background-color: rgba(0, 0, 0, 1);
+      color: #fff;
+    }
+    &:active {
+      transform: translateY(2px);
+    }
+  }
+  .__crossline {
+    width: 100%;
+    height: 1px;
+    background-color: #d9d9d9;
+    margin-top: 53px;
+    margin-bottom: 35px;
+  }
+  &__type {
+    li {
+      @include flex_row(start, center, nowrap);
+      height: 37px;
+      gap: 15px;
 
-			p,
-			span {
-				font-size: 16px;
-				font-weight: 400;
-				line-height: 24px;
-				color: #9f9f9f;
-			}
-			p {
-				width: 13%;
-			}
-		}
-		.__social {
-			@include flex_row(start, center, nowrap);
-			height: 38px;
-			gap: 25px;
-		}
-	}
+      p,
+      span {
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 24px;
+        color: #9f9f9f;
+      }
+      p {
+        width: 13%;
+      }
+    }
+    .__social {
+      @include flex_row(start, center, nowrap);
+      height: 38px;
+      gap: 25px;
+    }
+  }
 }
 
 .moreinfo {
-	border-top: 1px solid #d9d9d9;
-	border-bottom: 1px solid #d9d9d9;
-	padding-top: 50px;
-	padding-bottom: 65px;
-	&__containlist {
-		@include flex_row(center, center, nowrap);
-	}
-	&__list {
-		justify-self: center;
-		width: 649px;
-		@include flex_row(center, center, nowrap);
-		gap: 7%;
-		font-size: 24px;
-		font-weight: 500;
-		line-height: 36px;
-		span {
-			color: #9f9f9f;
-			&:hover {
-				cursor: pointer;
-				color: $text-color;
-			}
-		}
-		margin-bottom: 40px;
-	}
-	&__showing {
-		font-weight: 400;
-		p {
-			color: #9f9f9f;
-			font-size: 16px;
-			text-align: justify;
-			line-height: 24px;
-		}
-		@include flex_row(center, center, nowrap);
-		padding: 0 9.5%;
-	}
-	&__showingImage {
-		margin-top: 40px;
-		@include flex_row(space-between, center, nowrap);
-		gap: 4.3%;
-		.__img {
-			@include containimage(50%, 348px, 10px);
-		}
-	}
+  border-top: 1px solid #d9d9d9;
+  border-bottom: 1px solid #d9d9d9;
+  padding-top: 50px;
+  padding-bottom: 65px;
+  &__containlist {
+    @include flex_row(center, center, nowrap);
+  }
+  &__list {
+    justify-self: center;
+    width: 649px;
+    @include flex_row(center, center, nowrap);
+    gap: 7%;
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 36px;
+    span {
+      color: #9f9f9f;
+      &:hover {
+        cursor: pointer;
+        color: $text-color;
+      }
+    }
+    margin-bottom: 40px;
+  }
+  &__showing {
+    font-weight: 400;
+    p {
+      color: #9f9f9f;
+      font-size: 16px;
+      text-align: justify;
+      line-height: 24px;
+    }
+    @include flex_row(center, center, nowrap);
+    padding: 0 9.5%;
+  }
+  &__showingImage {
+    margin-top: 40px;
+    @include flex_row(space-between, center, nowrap);
+    gap: 4.3%;
+    .__img {
+      @include containimage(50%, 348px, 10px);
+    }
+  }
 }
 
 .__crosslinefooter {
-	margin-top: 95px;
-	background: #d9d9d9;
-	width: $max-width-screen;
-	height: 0.5px;
+  margin-top: 95px;
+  background: #d9d9d9;
+  width: $max-width-screen;
+  height: 0.5px;
 }
