--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -130,9 +130,11 @@ a {
       li {
         display: block;
         border: 3px solid transparent;
-        padding: 4px 0;
+        // padding: 4px 0;
         .active {
-          border-bottom: 3px solid #000;
+          // padding: 4px 0;
+
+          border-bottom: 3px solid #898989;
         }
       }
       li:hover {
